--- a/index.html
+++ b/index.html
@@ -13,7 +13,31 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
+		<!-- Puzzle -->
+<div class="puzzle">
+  <div class="puzzle-left">
+    <div class="puzzle-left-right"></div>
+    <div class="puzzle-left-bottom"></div>
+  </div>
+  <div class="puzzle-right">
+    <div class="puzzle-right-top"></div>
+    <div class="puzzle-right-right"></div>
+    <div class="puzzle-right-bottom"></div>
+    <div class="puzzle-right-left"></div>
+  </div>
+  <div class="puzzle-left-lower">
+    <div class="puzzle-left-lower-top"></div>
+    <div class="puzzle-left-lower-right"></div>
+    <div class="puzzle-left-lower-bottom"></div>
+    <div class="puzzle-left-lower-left"></div>
+  </div>
+  <div class="puzzle-right-lower">
+    <div class="puzzle-right-lower-top"></div>
+    <div class="puzzle-right-lower-right"></div>
+    <div class="puzzle-right-lower-bottom"></div>
+    <div class="puzzle-right-lower-left"></div>
+  </div>
+</div>
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -46,10 +70,10 @@
 								<h1>Hi, my name is Gwen</h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
+								<p>Un projet?<br />
+								Une envie?</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">Commencer</a></li>
 								</ul>
 							</div>
 						</div>
@@ -214,4 +238,5 @@
 	</body>
 
 </html>
+
 
