--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body>
+	<body class="is-preload">
 		<!-- Puzzle -->
 <div class="puzzle">
   <div class="puzzle-left">
@@ -238,6 +238,7 @@
 	</body>
 
 </html>
+
 
 
 
