--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="index.html">Un projet?</a></li>
+							<li><a href="landing.html">Qui suis-je?</a></li>
+							<li><a href="generic.html">Portfolio</a></li>
+							<li><a href="elements.html">Contact</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
@@ -89,7 +89,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
+										<h3><a href="landing.html" class="link">Ton projet</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -98,7 +98,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
+										<h3><a href="landing.html" class="link">Portfolio</a></h3>
 										<p>feugiat amet tempus</p>
 									</header>
 								</article>
@@ -107,7 +107,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
+										<h3><a href="landing.html" class="link">Gwen Graph</a></h3>
 										<p>Lorem etiam nullam</p>
 									</header>
 								</article>
@@ -116,26 +116,8 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
+										<h3><a href="landing.html" class="link">Contact</a></h3>
 										<p>Nisl sed aliquam</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
 									</header>
 								</article>
 							</section>
@@ -238,6 +220,7 @@
 	</body>
 
 </html>
+
 
 
 
